--- a/src/components/CountdownSection/CountdownSection.module.css
+++ b/src/components/CountdownSection/CountdownSection.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   padding: 4rem 2rem;
-  background-color: #fff9f9;
+  background-color: #fff5f7;
   /*background-image: url('../../assets/complete.jpg'); */
   background-size: 100%;
   background-position: center;
@@ -47,7 +47,7 @@
 .title {
   font-family: var(--secondaryFont);
   font-size: 2.5rem;
-  color: #4a4a4a;
+  color: #716283;
   margin-bottom: 3rem;
   text-align: center;
 }
@@ -81,7 +81,7 @@
 .number {
   font-family: var(--secondaryFont);
   font-size: 3rem;
-  color: #d4a5a5;
+  color: #96849C;
   font-weight: bold;
 }
 
@@ -94,7 +94,7 @@
 .label {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
-  color: #666;
+  color: #96849C;
   text-transform: uppercase;
   letter-spacing: 1px;
 } 
