--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -25,7 +25,7 @@
 
 .link {
   font-family: 'Montserrat', sans-serif;
-  color: #4a4a4a;
+  color: #716283;
   text-decoration: none;
   font-size: 1rem;
   cursor: pointer;
@@ -33,11 +33,11 @@
 }
 
 .link:hover {
-  color: #d4a5a5;
+  color: #96849C;
 }
 
 .link.active {
-  color: #d4a5a5;
+  color: #96849C;
   font-weight: 500;
 }
 
