--- a/src/components/DressCode/DressCode.module.css
+++ b/src/components/DressCode/DressCode.module.css
@@ -3,13 +3,13 @@
     flex-direction: column;
   background: #fff;
   border-radius: 16px;
-  padding: 2rem 1.5rem;
+  padding: 2rem 1.5rem 4rem;
   margin: 2rem auto;
 }
 
 .title {
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: var(--secondaryFont);
   font-size: 1.7rem;
   margin-bottom: 0.5rem;
   color: #716283;
@@ -17,7 +17,7 @@
 
 .subtitle {
   text-align: center;
-  font-family: 'Playfair Display', serif;
+  font-family: var(--secondaryFont);
   font-size: 1.2rem;
   margin-bottom: 1.5rem;
   color: #96849C;
@@ -64,7 +64,7 @@
 
 .ruleText {
   font-size: 1.1rem;
-  color: #444;
+  color: #716283;
   text-align: center;
   font-weight: 500;
   margin: 0;
@@ -73,7 +73,7 @@
 @media (max-width: 768px) {
     .dressCodeContainer {
         max-width: 100%;
-        padding: 1rem;
+        padding: 1rem 1rem 4rem;
     }
 
     .rulesContainer {
