--- a/src/components/CountdownSection/CountdownSection.module.css
+++ b/src/components/CountdownSection/CountdownSection.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 4rem 2rem;
   background-color: #fff5f7;
-  /*background-image: url('../../assets/complete.jpg'); */
+  /*background-image: url('/images/complete.jpg'); */
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
