--- a/src/components/MapSection/MapSection.module.css
+++ b/src/components/MapSection/MapSection.module.css
@@ -1,10 +1,11 @@
 .section {
   min-height: 70dvh;
   height: 100%;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 4rem;
   background-color: #fff;
   position: relative;
   overflow: hidden;
+  margin-top: -32px;
 }
 
 .section::before,
@@ -24,7 +25,7 @@
 
 .section::before {
   top: 0;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('../../assets/Top2.png');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('/images/Top2.png');
   
   transform: translateY(-20%);
   width: 110%;
@@ -35,7 +36,7 @@
 .section::after {
   z-index: 1;
   bottom: 0;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('../../assets/Bottom2.png');
+  background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url('/images/Bottom2.png');
   background-size: cover;
   width: 110%;
   transform: translateY(20%);
